--- a/pom.xml
+++ b/pom.xml
@@ -23,18 +23,18 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-test</artifactId>
-			<scope>test</scope>
+			<groupId>org.apache.maven.plugins</groupId>
+    			<artifactId>maven-source-plugin</artifactId>
+    			<version>2.4</version>
 		</dependency>
 	</dependencies>
 
 	<build>
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-    				<artifactId>maven-resources-plugin</artifactId>
-    				<version>3.2.5</version>
+			   <groupId>org.apache.maven.plugins</groupId>
+    		       	   <artifactId>maven-resources-plugin</artifactId>
+    			   <version>3.2.5</version>
 			</plugin> 
 		</plugins>
 	</build>
